--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -24,19 +24,17 @@
                 <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Products </a>
-                        <div class="dropdown-menu"><a class="dropdown-item dropdown-item-blue" href="{% url 'products:all-products' %}">All Products</a>
-                            <a class="dropdown-item dropdown-item-blue" href="#">Second Item</a>
-                            <a class="dropdown-item dropdown-item-blue" href="#">Third Item</a></div>
-                    </li>
-{#                    <li class="nav-item"><a class="nav-link" href="#">Second Item</a></li>#}
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="{% url 'products:all-products' %}">Shop Now</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'store:our-purpose' %}">Our Purpose</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'store:join_movement' %}">Join The Movement</a></li>
+                    {%  if user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" style="color: #D4AF37 !important;" href="{% url 'logout' %}">Logout</a></li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link" style="color: #D4AF37 !important;" href="{% url 'login' %}">Log In</a></li>
+                    {% endif %}
                 </ul>
-                {%  if user.is_authenticated %}
-                    <span class="navbar-text actions"> <a class="login" href="{% url 'logout' %}">Logout</a></span>
-                {% else %}
-                    <span class="navbar-text actions"> <a class="login" href="{% url 'login' %}">Log In</a></span>
-                {% endif %}
+
             </div>
         </div>
     </nav>
@@ -44,7 +42,13 @@
 
     {% endblock %}
     <section class="text-center vintage-font orange-background">
-        <div class="social-icons"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a></div>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/Global-Vintage-Love-109096961408500"><i class="icon ion-social-facebook"></i></a>
+            <a href="https://www.instagram.com/globalvintagelove/"><i class="icon ion-social-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UC1ewCtR5qDollKTIeUQg8TA"><i class="icon ion-social-youtube"></i></a>
+            <a href="https://www.pinterest.com/globalvintagelove/"><i class="icon ion-social-pinterest"></i></a>
+
+        </div>
     </section>
     <section>
         <div style="text-align: center;"><span class="copyright"><br>©2021 Vintage Love<br><br></span></div>
