--- a/base/static/css/PowellAntique.css
+++ b/base/static/css/PowellAntique.css
@@ -4,3 +4,10 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'Cinzel-Regular';
+	src: url(../fonts/Cinzel-Regular.ttf) format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
