--- a/base/static/css/Social-Icons.css
+++ b/base/static/css/Social-Icons.css
@@ -6,15 +6,13 @@
 }
 
 .social-icons i {
-  font-size: 32px;
+  font-size: 40px;
   display: inline-block;
-  color: #0A486A;
+  color: #ffffff;
   margin: 0 10px;
   width: 60px;
   height: 60px;
-  border: 1px solid #0A486A;
   text-align: center;
-  border-radius: 50%;
   line-height: 60px;
 }
 
