--- a/products/templates/product-page.html
+++ b/products/templates/product-page.html
@@ -24,7 +24,9 @@
                     <div id="productCarousel" class="carousel carousel-dark slide" data-bs-interval="false" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             {% for product_image in product_images %}
-                            <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="{{ forloop.counter0 }}" {% if forloop.first %}class="active" aria-current="true" {% endif %}aria-label="Slide {{ forloop.counter }}"></button>
+                            <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="{{ forloop.counter0 }}" {% if forloop.first %}class="active" aria-current="true" {% endif %}aria-label="Slide {{ forloop.counter }}">
+                                <img
+                            </button>
                             {% endfor %}
                         </div>
                         <div class="carousel-inner">
