--- a/store/templates/our-purpose.html
+++ b/store/templates/our-purpose.html
@@ -5,46 +5,14 @@
         <h3 class="orange-font vintage-font">UNLOCK THE WORLD OF VINTAGE</h3>
         <div class="text-options white-font vintage-font mb-5">
             <span>
-                Each of us have a story, a journey trough an era that we grew in. the items<br/>
-                from that period bring us home to a simpler time. these timeless treasures are<br/>
-                tucked away in shops all around the world just waiting to be found.<br/>
-                Our mission is to bring those jewels to light and deliver them directly to you.<br/>
-                Here is how it works...
+                We offer the greatest selection of vintage pieces from around the<br/>
+                world. Global Vintage Love makes vintage treasure hunting simple.<br/>
+                Whether decorating a small room or adding the final touches to your<br/>
+                custom home, Global Vintage Love is ready to serve. Discover unique<br/>
+                vintage pieces and get them delivered straight to your doorstep.<br/>
+                Enjoy the hunt; find what you love.
             </span>
         </div>
-        <h3 class="orange-font vintage-font">1</h3>
-        <h5 class="cinzel-font" style="color: #088FAB;">
-            We Go Treasure Hunting
-        </h5>
-        <div class="text-options white-font vintage-font mb-5">
-            <span>
-                We help keep pickers busy and able to surface as many precious finds as possible.<br/>
-                Our inventory is ever changing and majority of items are quantity 1. Our<br/>
-                coverage is ever-expanding, meaning new offerings are continually added.
-            </span>
-        </div>
-        <h3 class="orange-font vintage-font">2</h3>
-        <h5 class="cinzel-font" style="color: #088FAB;">
-            Sell It Fairly
-        </h5>
-        <div class="text-options white-font vintage-font mb-5">
-            <span>
-                As new treasures are drummed up, we display them wholesale to our retail partners<br/>
-                for 'as-is' purchase. Select items that have been vetted are cleaned and restored if<br/>
-                needed and made available to the public for sale at fair prices.
-            </span>
-        </div>
-        <h3 class="orange-font vintage-font">3</h3>
-        <h5 class="cinzel-font" style="color: #088FAB;">
-            Ship It To You
-        </h5>
-        <div class="text-options white-font vintage-font mb-5">
-            <span>
-                One of the greatest conveniences we have all become accustomed to is<br/>
-                delivery. Vintage goods should be no different, so we secure them safely in<br/>
-                eco-friendly packaging and ship directly to your door... free in most cases.
-            </span>
-        </div>
+        <a href="{% url 'products:all-products' %}" class="btn btn-primary vintage-button white-font rounded-3">Shop Now</a>
     </section>
-    {% include 'join-the-movement-section.html' %}
 {% endblock %}
