--- a/products/templates/product-list-cards.html
+++ b/products/templates/product-list-cards.html
@@ -1,33 +1,22 @@
 {% load string_manipulation %}
-    <h3>individual attributes</h3>
-    {% for attribute in attributes %}
-    {{ attribute }}<br/>
-    {% endfor %}
-    <h3>merged attributes</h3>
-    {{ merged_attributes }}<br/>
     <section class="product-section body-padding">
         <div class="container">
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xxl-4 g-4">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xxl-4 g-4">
                 {% for product in products %}
-                    <div class="col">
-                        <div class="card h-100" style="width: 18rem;">
-                            <div class="text-center card-img-top" style="height: 17rem; width: auto; margin-top: 0.5rem;">
-                                <img style="height: 17rem; width: {% if product.productimage__image_width < product.productimage__image_height %}{% widthratio product.productimage__image_width product.productimage__image_height 17 %}{% else %}{% widthratio product.productimage__image_height product.productimage__image_width 17 %}{% endif %}rem;" src="/media/{{ product.productimage__image }}" alt="Card image cap">
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">{{ product.title }}</h5>
-                                <p class="card-text" style="height: 3em;">{{ product.description|trunk:60 }}</p>
-                                <h4 style="margin-bottom: 1rem" class="card-text">${{ product.retail_price }}</h4>
-                                <div class="text-center">
-                                    <a style="width: 10rem;" href="{% url 'products:product' product.id %}" class="btn btn-primary vintage-button">View Item</a><br/>
-                                    <a style="width: 10rem; margin-top: .5rem;" href="{% url 'orders:order_create' product.id %}" class="btn btn-primary vintage-button">Order Now</a>
-                                    {% if user.is_authenticated %}
-                                        <br/><a style="width: 10rem; margin-top: .5rem;" href="{% url 'products:product-qr' product.id %}" class="btn btn-primary vintage-button">View QR</a>
-                                    {% endif %}
+                    <a class="custom-card" href="{% url 'products:product' product.id %}">
+                        <div class="col">
+                            <div class="card product-card h-100" style="width: 18rem;">
+                                <div class="text-center card-img-top" style="height: 17rem; width: auto; margin-top: 0.5rem;">
+                                    <img style="height: 17rem; width: {% if product.productimage__image_width < product.productimage__image_height %}{% widthratio product.productimage__image_width product.productimage__image_height 17 %}{% else %}{% widthratio product.productimage__image_height product.productimage__image_width 17 %}{% endif %}rem;" src="/media/{{ product.productimage__image }}" alt="Card image cap">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title" style="height: 3em">{{ product.title }}</h5>
+                                    <p class="card-text" style="height: 3em;">{{ product.description|trunk:60 }}</p>
+                                    <h4 style="margin-bottom: 1rem" class="card-text">${{ product.retail_price_int }}</h4>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 {% endfor %}
             </div>
         </div>
