--- a/products/templates/product-list.html
+++ b/products/templates/product-list.html
@@ -1,4 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-    {% include 'product-list-cards.html' %}
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                {% include 'filters.html' %}
+            </div>
+            <div class="col-9">
+                {% include 'product-list-cards.html' %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
