--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% include 'category-nav.html' %}
     <section class="vintage-font" >
-        <div style="height:538px; background-image: url('{% get_static_prefix %}img/Hero Image.png'); background-size: cover; background-position: center;">
+        <div style="height:500px; background-image: url('{% get_static_prefix %}img/Hero Image.webp'); background-size: cover; background-position: center;">
             <div class="vertical-center" style="padding-left: 2em;">
                 <h1 class="blue-font">Global Vintage Love</h1>
                 <h2 class="orange-font mb-4">Unlocking the world of vintage, one treasure at a time</h2>
