--- a/products/templates/product-list-cards.html
+++ b/products/templates/product-list-cards.html
@@ -10,9 +10,8 @@
                                     <img style="height: 17rem; width: {% if product.productimage__image_width < product.productimage__image_height %}{% widthratio product.productimage__image_width product.productimage__image_height 17 %}{% else %}{% widthratio product.productimage__image_height product.productimage__image_width 17 %}{% endif %}rem;" src="/media/{{ product.productimage__image }}" alt="Card image cap">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title" style="height: 3em">{{ product.title }}</h5>
-                                    <p class="card-text" style="height: 3em;">{{ product.description|trunk:60 }}</p>
-                                    <h4 style="margin-bottom: 1rem" class="card-text">${{ product.retail_price_int }}</h4>
+                                    <p class="card-title" style="height: 3em; font-weight: bold;">{{ product.title }}</p>
+                                    <p style="margin-bottom: 1rem" class="card-text">${{ product.retail_price_int }}</p>
                                 </div>
                             </div>
                         </div>
