--- a/base/static/css/PowellAntique.css
+++ b/base/static/css/PowellAntique.css
@@ -11,3 +11,10 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'Sackers';
+	src: url(../fonts/SackersGothicStd-Light.otf);
+	font-weight: normal;
+	font-style: normal;
+}
