Updated CSS for footer.  Fixed index button text.

--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -12,8 +12,8 @@
                     We offer a large variety of vintage assets, all from the ease of one platform</p>
                     <p>Whether updating one room, or revamping rooms in your entire home, Global Vintage Love is here for you.</p>
                 </span>
-                <a style="width: 10rem;" href="{% url 'products:all-products' %}" class="btn btn-primary vintage-button blue-font rounded-3">$250 or less</a>
-                <a style="width: 10rem;" href="{% url 'store:our-purpose' %}" class="btn btn-primary blue-button rounded-3">$250 or less</a>
+                <a href="{% url 'products:all-products' %}" class="btn btn-primary vintage-button blue-font rounded-3">Shop Now</a>
+                <a href="{% url 'store:our-purpose' %}" class="btn btn-primary blue-button rounded-3">Our Purpose</a>
             </div>
             <div class="col-md-8">
                 <img src="{% get_static_prefix %}img/Hero Image.jpg" width="100%">
