--- a/base/static/css/Navigation-with-Button.css
+++ b/base/static/css/Navigation-with-Button.css
@@ -296,3 +296,8 @@ a.custom-card:hover {
   color: inherit;
   text-decoration: inherit;
 }
+
+#nav-footer a {
+  text-decoration: none !important;
+  color: inherit !important;
+}
